fixes #21 performance optimization for converting string to integer or long